convert to using codebase viewBinding

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="rate_this_app">Rate this app</string>
     <string name="open">Open</string>
     <string name="close">Close</string>
+    <string name="making_your_daiies_informative">Making your daiies informative</string>
 </resources>
